# mcp-test

./: .gitignore  .gitmodules
host-app/: Taskfile.yml  config.yml  main.py  pyproject.toml  rxconfig.py
host-app/host_app/: containers.py  functional_langgraph.py  graph.py  host_app.py  models.py  process.py  state.py
host-app/host_app/components/: chat.py  modal.py  navbar.py
host-app/tests/: test_graph.py
mcp-client/: client.py  pyproject.toml
mcp-client/mcp_client/: __init__.py  multi_client.py
mcp-client/tests/: test_multi_mcp_client.py
mcp-server/: Taskfile.yml  pyproject.toml  server.py
