[project]
name = "host-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "openai>=1.14.0",
    "reflex>=0.7.0",
    "reflex-chakra>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
]
