[project]
name = "host-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.46.0",
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "mcp-client",
    "openai>=1.14.0",
    "reflex>=0.7.0",
    "reflex-chakra>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
mcp-client = { path = "../mcp-client" }

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
]
